--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <div class="row">
           <div class="col col--event">
             <div class="text--event">
-              <img class="ellips" src="/images/ellips.svg" alt="" />Идёт 74
-              серия наблюдений
+              <img class="ellips" src="/images/logo2.svg" alt="" />
             </div>
           </div>
         </div>
@@ -164,7 +163,8 @@
 
         <div class="row text--bl">
           <div class="col">
-            <div class="textcols">
+              <div class="join--text--tight">НЕТ ДОСТУПНЫХ ДАТ</div>
+            <!-- <div class="textcols">
               <div class="textcols-left">
                 <div class="join--text--tight">2-11 ИЮЛЯ</div>
                 <div class="join--text--tight">30 ИЮЛЯ — 13 АВГУСТА</div>
@@ -175,7 +175,7 @@
                 <div class="join--text--tight">31 ОКТЯБРЯ — 11 НОЯБРЯ</div>
                 <div class="join--text--tight">1-11 ДЕКАБРЯ</div>
               </div>
-            </div>
+            </div> -->
           </div>
         </div>
       </div>
@@ -189,6 +189,26 @@
           </div>
         </div>
 
+        <div class="d-flex justify-content-around" style="display: flex;">
+            <div class="column" style="flex-grow: 1;">
+                <div class="block" style="text-align: center;">
+                    <img class="img--int--1" src="/images/whatsapp.svg" alt="" />
+                </div>
+            </div>
+
+            <div class="column" style="flex-grow: 1;">
+                <div class="block" style="text-align: center;">
+                    <img class="img--int" src="/images/telegram.svg" alt="" />
+                </div>
+            </div>
+
+            <div class="column" style="flex-grow: 1;">
+                <div class="block" style="text-align: center;">
+                    <img class="img--int--3" src="/images/viber.svg" alt="" />
+                </div>
+            </div>
+        </div>
+<!-- 
         <div class="row justify-content-evenly mt-3 ml-3">
           <div class="col">
             <img class="img--int--1" src="/images/whatsapp.svg" alt="" />
@@ -201,7 +221,7 @@
           <div class="col">
             <img class="img--int--3" src="/images/viber.svg" alt="" />
           </div>
-        </div>
+        </div> -->
 
         <div class="row">
           <div class="col">
@@ -212,19 +232,19 @@
         </div>
 
         <div class="row align-items-center justify-content-between mt-3 ml-3">
-          <div class="col-xl-3 col-xs-6 col-sm-6">
+          <div class="col-xl-3 col-6 col-sm-6">
             <img class="img--footer" src="/images/irk.svg" alt="" />
           </div>
 
-          <div class="col-xl-2 col-xs-6 col-sm-6">
+          <div class="col-xl-2 col-6 col-sm-6">
             <img class="img--footer" src="/images/gis.svg" alt="" />
           </div>
 
-          <div class="col-xl-2 col-xs-6 col-sm-6">
+          <div class="col-xl-2 col-6 col-sm-6">
             <img class="img--footer" src="/images/yan.svg" alt="" />
           </div>
 
-          <div class="col-xl-2 col-xs-6 col-sm-6">
+          <div class="col-xl-2 col-6 col-sm-6">
             <img class="img--footer" src="/images/google.svg" alt="" />
           </div>
         </div>
