--- a/index.html
+++ b/index.html
@@ -22,10 +22,25 @@
   <body>
     <section class="section--top">
       <div class="container">
-        <div class="row">
-          <div class="col col--event">
-            <div class="text--event">
-              <img class="ellips" src="/images/logo2.svg" alt="" />
+        <div class="block-event">
+          <div class="d-flex align-items-center">
+            <div class="column" style="flex-grow: 1; flex-basis: 0">
+              <div class="block text--event" style="text-align: center">
+                <img class="ellips" src="/images/ellips.svg" alt="" />Идёт
+                74серия наблюдений
+              </div>
+            </div>
+
+            <div class="column" style="flex-grow: 1; flex-basis: 0">
+              <div class="block" style="text-align: center">
+                <img src="/images/logo2.svg" alt="" />
+              </div>
+            </div>
+
+            <div class="column" style="flex-grow: 1; flex-basis: 0">
+              <div class="block text--event" style="text-align: center">
+                EN | RU
+              </div>
             </div>
           </div>
         </div>
@@ -147,9 +162,7 @@
           </div>
 
           <div class="col-md-6 col-sm-12 col-12">
-            <div class="img--map overflow-hidden" id="map">
-
-            </div>
+            <div class="img--map overflow-hidden" id="map"></div>
           </div>
         </div>
 
@@ -163,7 +176,7 @@
 
         <div class="row text--bl">
           <div class="col">
-              <div class="join--text--tight">НЕТ ДОСТУПНЫХ ДАТ</div>
+            <div class="join--text--tight">НЕТ ДОСТУПНЫХ ДАТ</div>
             <!-- <div class="textcols">
               <div class="textcols-left">
                 <div class="join--text--tight">2-11 ИЮЛЯ</div>
@@ -189,39 +202,25 @@
           </div>
         </div>
 
-        <div class="d-flex justify-content-around" style="display: flex;">
-            <div class="column" style="flex-grow: 1;">
-                <div class="block" style="text-align: center;">
-                    <img class="img--int--1" src="/images/whatsapp.svg" alt="" />
-                </div>
+        <div class="d-flex justify-content-around" style="display: flex">
+          <div class="column" style="flex-grow: 1">
+            <div class="block" style="text-align: center">
+              <img class="img--int--1" src="/images/whatsapp.svg" alt="" />
             </div>
+          </div>
 
-            <div class="column" style="flex-grow: 1;">
-                <div class="block" style="text-align: center;">
-                    <img class="img--int" src="/images/telegram.svg" alt="" />
-                </div>
+          <div class="column" style="flex-grow: 1">
+            <div class="block" style="text-align: center">
+              <img class="img--int" src="/images/telegram.svg" alt="" />
             </div>
+          </div>
 
-            <div class="column" style="flex-grow: 1;">
-                <div class="block" style="text-align: center;">
-                    <img class="img--int--3" src="/images/viber.svg" alt="" />
-                </div>
+          <div class="column" style="flex-grow: 1">
+            <div class="block" style="text-align: center">
+              <img class="img--int--3" src="/images/viber.svg" alt="" />
             </div>
+          </div>
         </div>
-<!-- 
-        <div class="row justify-content-evenly mt-3 ml-3">
-          <div class="col">
-            <img class="img--int--1" src="/images/whatsapp.svg" alt="" />
-          </div>
-
-          <div class="col">
-            <img class="img--int" src="/images/telegram.svg" alt="" />
-          </div>
-
-          <div class="col">
-            <img class="img--int--3" src="/images/viber.svg" alt="" />
-          </div>
-        </div> -->
 
         <div class="row">
           <div class="col">
@@ -258,16 +257,16 @@
 
     <script src="https://maps.api.2gis.ru/2.0/loader.js?pkg=full"></script>
     <script type="text/javascript">
-        var map;
-    
-        DG.then(function () {
-            map = DG.map('map', {
-                center: [51.881711,103.848353 ],
-                zoom: 15
-            });
+      var map
 
-            DG.marker([51.881382, 103.843903]).addTo(map);
-        });
+      DG.then(function () {
+        map = DG.map('map', {
+          center: [51.881711, 103.848353],
+          zoom: 15,
+        })
+
+        DG.marker([51.881382, 103.843903]).addTo(map)
+      })
     </script>
   </body>
 </html>
