фикс белой полосы

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
         </div>
 
         <div class="row text--bl">
-          <div class="col">
+          <div class="col" align="center">
             <div class="join--text--tight">НЕТ ДОСТУПНЫХ ДАТ</div>
             <!-- <div class="textcols">
               <div class="textcols-left">
