горяшие при наведении иконки

--- a/index.html
+++ b/index.html
@@ -231,20 +231,20 @@
         </div>
 
         <div class="row align-items-center justify-content-between mt-3 ml-3">
-          <div class="col-xl-3 col-6 col-sm-6">
-            <img class="img--footer" src="/images/irk.svg" alt="" />
+          <div class="col-xl-2 col-6 col-sm-6">
+            <img class="img--footer img--footer-colour" src="/images/logo_f.png" alt="" />
           </div>
 
           <div class="col-xl-2 col-6 col-sm-6">
-            <img class="img--footer" src="/images/gis.svg" alt="" />
+            <img class="img--footer img--footer-colour" src="/images/gis_f.png" alt="" />
           </div>
 
           <div class="col-xl-2 col-6 col-sm-6">
-            <img class="img--footer" src="/images/yan.svg" alt="" />
+            <img class="img--footer img--footer-colour" src="/images/yan_f.png" alt="" />
           </div>
 
           <div class="col-xl-2 col-6 col-sm-6">
-            <img class="img--footer" src="/images/google.svg" alt="" />
+            <img class="img--footer img--footer-colour" src="/images/google_f.png" alt="" />
           </div>
         </div>
       </div>
